# rust-file-compressor

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: .gitignore  RESULTS.md
scripts/: make_sample_text.py
src/: dict.rs  lib.rs  main.rs
