[package]
name = "rust-file-compressor"
version = "0.1.0"
edition = "2024"
description = "A fast Rust file compressor CLI with zstd compression and zip benchmarking."
license = "MIT"

[[bin]]
name = "rzc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
tempfile = "3.23.0"
