[package]
name = "rust-file-compressor"
version = "0.2.0"
edition = "2021"
description = "A fast Rust file compressor CLI with zstd compression, integrity checks, and zip benchmarking."
license = "MIT"
readme = "README.md"
keywords = ["compression", "zstd", "cli"]
categories = ["command-line-utilities", "compression"]

[lib]
name = "rust_file_compressor"
path = "src/lib.rs"

[[bin]]
name = "rzc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4"
indicatif = "0.17"
sha2 = "0.10"
walkdir = "2"
zstd = { version = "0.13.3", features = ["zstdmt"] }

[dev-dependencies]
tempfile = "3.23.0"
